fix x offset, fix timer align, add GAME OVER, add admin dashboard tsar

--- a/public/style/cards.css
+++ b/public/style/cards.css
@@ -111,7 +111,7 @@ em {
 .giant-x {
   display: block;
   position: absolute;
-  left: 0px;
+  left: 10px;
   top: 0px;
   font-size: 200px;
   line-height: 1em;
